Add LEIN_USE_BOOTCLASSPATH.
Telling people to use LEIN_JVM_OPTS for this is not great, because a
given setting would only work with a single version of Leiningen.

[skip ci]